--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -8,10 +8,11 @@
     padding-right: 20px;
     text-align: center;
     border-radius: 12px;
-    background-color: rgba(240, 248, 255, 0.241);
+    background-color: rgb(220, 220, 184);
+    margin: 1rem;
   }
   img {
-    width: 150px;
+    width: 240px;
     margin: 20px;
     border-radius: 20px;
   }
@@ -20,6 +21,6 @@
     text-shadow: 2px 2px rgba(240, 248, 255, 0.241);
   }
   a {
-    color: #0b0089;
+    color: #1703fd;
     text-decoration: none;
   }
